==> Gary-Starling/embedded_stm32/ssd1306-oled-siplay/Src/ssd1306.c <==
#include "ssd1306.h"
#include <math.h>
#include <stdlib.h>
#include <string.h>
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))

void ssd1306_Reset(void)
{
/* for I2C - do nothing */
}

uint8_t ssd1306_WriteCommand(uint8_t byte) 
{
  if(HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &byte, 1, 100)!=HAL_OK)
  {
    return 0;//i2c error
  }
  
  return 1; //ok
}

uint8_t ssd1306_WriteData(uint8_t* buffer, size_t buff_size)
{
  if(HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, buffer, buff_size, 100)!=HAL_OK)
  {
    return 0;//i2c error
  }
  
  return 1;//ok
}

void ssd1306_Reset(void) 
{
  // CS = High (not selected)
  HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_SET);
  
  // Reset the OLED
  HAL_GPIO_WritePin(SSD1306_Reset_Port, SSD1306_Reset_Pin, GPIO_PIN_RESET);
  HAL_Delay(10);
  HAL_GPIO_WritePin(SSD1306_Reset_Port, SSD1306_Reset_Pin, GPIO_PIN_SET);
  HAL_Delay(10);
}

void ssd1306_WriteCommand(uint8_t byte) {
  HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_RESET); // select OLED
  HAL_GPIO_WritePin(SSD1306_DC_Port, SSD1306_DC_Pin, GPIO_PIN_RESET); // command
  HAL_SPI_Transmit(&SSD1306_SPI_PORT, (uint8_t *) &byte, 1, 200);
  HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_SET); // un-select OLED
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {
  HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_RESET); // select OLED
  HAL_GPIO_WritePin(SSD1306_DC_Port, SSD1306_DC_Pin, GPIO_PIN_SET); // data
  HAL_SPI_Transmit(&SSD1306_SPI_PORT, buffer, buff_size, 200);
  HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_SET); // un-select OLED
}
