==> muharlyamovi/Education/STM-Board/firmware/Project-game/lib/src/ssd1306.c <==
#include "ssd1306.h"

void ssd1306_Reset(void) {
    // CS = High (not selected)
	GPIO_SetBits(SSD1306_CS_Port, SSD1306_CS_Pin);

    // Reset the OLED
    GPIO_ResetBits(SSD1306_Reset_Port, SSD1306_Reset_Pin);
    Delay(10);
    GPIO_SetBits(SSD1306_Reset_Port, SSD1306_Reset_Pin);
    Delay(10);
}

void ssd1306_WriteCommand(uint8_t byte) {
	GPIO_ResetBits(SSD1306_CS_Port, SSD1306_CS_Pin); // select OLED
	GPIO_ResetBits(SSD1306_DC_Port, SSD1306_DC_Pin); // command
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET) {}
    SPI_SendData(SPI1, (uint8_t)byte);

    GPIO_SetBits(SSD1306_CS_Port, SSD1306_CS_Pin); // un-select OLED
}

void ssd1306_WriteData(uint8_t *buffer, size_t buff_size) {
	GPIO_ResetBits(SSD1306_CS_Port, SSD1306_CS_Pin); // select OLED
	GPIO_SetBits(SSD1306_DC_Port, SSD1306_DC_Pin); // data

	  uint8_t pTxBufferPtr = (uint8_t *)&buffer;
	  for(int i = 0; i < SSD1306_WIDTH; i++){
		while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET) {}
	    SPI_SendData(SPI1,&pTxBufferPtr);
	    pTxBufferPtr += sizeof(uint8_t);
	  }

    GPIO_SetBits(SSD1306_CS_Port, SSD1306_CS_Pin); // un-select OLED
}
